# telebot32

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  botname.h.in  telebot32.code-workspace  telebot32.pc.in  telebot32Config.cmake.in  telega32.code-workspace  version.h.in
example/: CMakeLists.txt  telega32.cpp
src/: CMakeLists.txt  gsbutils.h  tlg32.cpp  tlg32.h  version.h
tlg32/: CMakeLists.txt  tlg32.cpp  tlg32.h
