cmake_minimum_required(VERSION 3.20)
project(${PROJECT_NAME} LANGUAGES CXX VERSION ${PROJECT_VERSION})

message(STATUS ${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)

if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Darwin")
set(CURL_DIR "/usr/local/share/vcpkg/packages/curl_x64-osx/share/curl/")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/opt/local/lib")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -I. -I/usr/local/include  -I/opt/local/include -pthread ")
else()
set(CURL_DIR "/usr/local/share/vcpkg/packages/curl_x64-linux/share/curl")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/usr/local/lib")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -I. -I/usr/local/include -pthread ")
endif()

string(STRIP "${CMAKE_EXE_LINKER_FLAGS}" CMAKE_EXE_LINKER_FLAGS)

if(${MAIN_PROJECT})
    set(USEUTILS "#define UNUSEUTILS 1")
    configure_file(../version.h.in ../../src/version.h)
    add_library(${PROJECT_NAME} SHARED tlg32.cpp)
    if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Darwin")
     target_link_libraries(${PROJECT_NAME} ${PKGS_LDFLAGS}/opt/local/lib/libgsbutils.dylib)
    else()
     target_link_libraries(${PROJECT_NAME} ${PKGS_LDFLAGS} gsbutils)
    endif()
    target_include_directories(${PROJECT_NAME} PUBLIC /usr/local/include /opt/local/include)
else()
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../../version.h.in ${CMAKE_CURRENT_SOURCE_DIR}/version.h)
    add_library(${PROJECT_NAME} STATIC tlg32.cpp)
    target_include_directories(${PROJECT_NAME} PUBLIC ./..)
    target_link_libraries(${PROJECT_NAME} ${CMAKE_EXE_LINKER_FLAGS} gsbutils)
endif()

find_package(CURL CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} CURL::libcurl)
